--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Swarup Bhise",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2"
