--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.4.0",
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.7",
     "emoji-mart": "^5.5.2",
