--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -17,6 +17,7 @@
     "@faker-js/faker": "^8.4.0",
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.7",
+    "@reduxjs/toolkit": "^2.2.0",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^11.0.3",
     "phosphor-react": "^1.4.1",
@@ -25,7 +26,9 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.0.4",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.4",
     "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^3.5.2"
