--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.4.0",
+    "@hookform/resolvers": "^3.3.4",
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.2.0",
@@ -25,13 +26,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.4",
     "stylis-plugin-rtl": "^2.1.1",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^3.5.2",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
