--- a/backend-v2/package.json
+++ b/backend-v2/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.10",
     "otp-generator": "^4.0.1",
     "xss": "^1.0.14"
   }
