--- a/backend-v2/package.json
+++ b/backend-v2/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.10",
     "otp-generator": "^4.0.1",
+    "socket.io": "^4.7.4",
     "xss": "^1.0.14"
   }
 }
