--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.4",
+    "socket.io-client": "^4.7.4",
     "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^3.5.2",
     "yup": "^1.3.3"
