--- a/backend-v2/package.json
+++ b/backend-v2/package.json
@@ -11,6 +11,7 @@
   },
   "author": "swarupbhise <contact.swarupbhise@gmail.com>",
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.2",
@@ -18,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
+    "graphql": "^16.8.1",
     "helmet": "^7.1.0",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
