--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.3",
@@ -22,6 +23,7 @@
     "axios": "^1.6.7",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^11.0.3",
+    "graphql": "^16.8.1",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
