--- a/backend-v2/package.json
+++ b/backend-v2/package.json
@@ -20,6 +20,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "graphql": "^16.8.1",
+    "graphql-upload": "^16.0.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
