--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -20,6 +20,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.2.0",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.6.7",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^11.0.3",
