--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -19,7 +19,10 @@
     "@hookform/resolvers": "^3.3.4",
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.7",
+    "@mui/x-charts": "^7.6.2",
     "@reduxjs/toolkit": "^2.2.0",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.6.7",
     "emoji-mart": "^5.5.2",
@@ -32,6 +35,8 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.4",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-qrcode-logo": "^3.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0",
