--- a/backend-v2/package.json
+++ b/backend-v2/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.2",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "graphql": "^16.8.1",
     "graphql-upload": "^16.0.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.10",
