Dockerize The Chat App

--- a/backend-v2/.env.sample
+++ b/backend-v2/.env.sample
@@ -8,6 +8,9 @@ GRAPHQL_PORT=3001
 # MongoDB
 MONGODB_URL=mongodb://localhost:27017/your_database
 
+# Mongo url for Docker
+# MONGODB_URL=mongodb://<usename>:<password>@mongoserver:27017/mydatabase
+
 # Stripe
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
