--- a/backend-v2/package.json
+++ b/backend-v2/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index",
-    "start": "node index"
+    "start": "node index",
+    "docker:build": "docker build -t talk-live-backend ."
   },
   "author": "swarupbhise <contact.swarupbhise@gmail.com>",
   "dependencies": {
